<resources>
    <string name="app_name">Game Stockz</string>
    <string name="login_background">login_background</string>
    <string name="on_boarding5_illustration">on_boarding5_illustration</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <!-- Login & Signup Strings -->
    <string name="mobile_num">Mobile Number</string>
    <string name="pass">Password</string>
    <string name="log_in">Log in</string>
    <string name="forget_pass">Forget Password</string>
    <string name="terms_and_conditions"><![CDATA[By Clicking Sign Up button, you agree to our Terms & Conditions, and Privacy Policy.]]></string>
    <string name="full_name">Full Name</string>
    <string name="get_otp">OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="email">Email</string>
    <string name="conf_pas">Confirm Password</string>
    <string name="reffer">Refferal Code</string>
    <string name="sign_up">Sign Up</string>
    <string name="onboarding4">Ask Queries and Issues and we Reach you within 24hr</string>
    <string name="country_code">+91</string>
    <string name="resendOtp">resend otp</string>
    <string name="app_slogan">We Bet you\'ll love it</string>
    <string name="splash_screen_logo">splash_screen_logo</string>
    <string name="new_pass">New Password</string>
    <string name="conf_new_pass">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_amount">Enter Amount</string>
</resources>