<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".SignupFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fullname"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/full_name"
            android:textColorHint="@color/blue_300"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="@color/blue_a200"
            app:boxStrokeErrorColor="@color/red_a700"
            app:boxStrokeWidth="2dp"

            app:endIconMode="clear_text"
            app:endIconTint="@color/blue_300"
            app:hintTextColor="@color/pink_A200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintWidth_percent=".8"
            app:startIconDrawable="@drawable/person"
            app:startIconTint="@color/blue_300">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/full_name"
                android:inputType="textPersonName"
                android:maxLength="26"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mobile"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/mobile_num"
            android:textColorHint="@color/blue_300"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="@color/blue_a200"
            app:boxStrokeErrorColor="@color/mtrl_error"
            app:boxStrokeWidth="2dp"
            app:endIconMode="custom"
            app:endIconTint="@color/pink_A200"
            app:hintTextColor="@color/pink_A200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/fullname"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/fullname"
            app:layout_constraintTop_toBottomOf="@+id/fullname"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintWidth_percent=".6"
            app:prefixText="@string/country_code"
            app:prefixTextColor="@color/white"
            app:startIconDrawable="@drawable/phone"
            app:startIconTint="@color/blue_300"
            tools:ignore="RtlSymmetry">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="@string/mobile_num"
                android:inputType="number"
                android:maxLength="10"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/sendOTP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/get_otp"
            android:src="@drawable/otp"
            app:layout_constraintBottom_toBottomOf="@+id/mobile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.196"
            app:layout_constraintStart_toEndOf="@+id/mobile"
            app:layout_constraintTop_toTopOf="@+id/mobile"
            app:layout_constraintVertical_bias=".5" />

        <TextView
            android:id="@+id/resend_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/resend_otp_again"
            android:textAllCaps="true"
            android:textColor="@color/pink500"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@+id/otp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/mobile"
            app:layout_constraintTop_toBottomOf="@+id/sendOTP"
            app:layout_constraintVertical_bias=".5"
            tools:ignore="SmallSp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/otp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_otp"
            android:textColorHint="@color/blue_300"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="@color/blue_a200"
            app:boxStrokeErrorColor="@color/mtrl_error"
            app:boxStrokeWidth="2dp"
            app:endIconDrawable="@drawable/cross"
            app:endIconMode="clear_text"
            app:endIconTint="@color/blue_300"
            app:hintTextColor="@color/pink_A200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/mobile"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/mobile"
            app:layout_constraintTop_toBottomOf="@+id/mobile"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintWidth_percent=".8"
            app:startIconDrawable="@drawable/notification"
            app:startIconTint="@color/blue_300">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enter_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="6"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            android:textColorHint="@color/blue_300"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="@color/blue_a200"
            app:boxStrokeErrorColor="@color/mtrl_error"
            app:boxStrokeWidth="2dp"
            app:endIconDrawable="@drawable/cross"
            app:endIconMode="clear_text"
            app:endIconTint="@color/blue_300"
            app:hintTextColor="@color/pink_A200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/otp"
            app:layout_constraintStart_toStartOf="@+id/otp"
            app:layout_constraintTop_toBottomOf="@+id/otp"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintWidth_percent=".8"
            app:startIconDrawable="@drawable/email"
            app:startIconTint="@color/blue_300">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/email"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pass"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/pass"
            android:textColorHint="@color/blue_300"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="@color/blue_a200"
            app:boxStrokeErrorColor="@color/mtrl_error"
            app:boxStrokeWidth="2dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/blue_300"
            app:hintTextColor="@color/pink_A200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/email"
            app:layout_constraintStart_toStartOf="@+id/email"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintWidth_percent=".8"
            app:startIconDrawable="@drawable/lock"
            app:startIconTint="@color/blue_300">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/pass"
                android:inputType="textPassword"
                android:maxLength="26"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confpass"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/conf_pas"
            android:textColorHint="@color/blue_300"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="@color/blue_a200"
            app:boxStrokeErrorColor="@color/mtrl_error"
            app:boxStrokeWidth="2dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/blue_300"
            app:hintTextColor="@color/pink_A200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/pass"
            app:layout_constraintStart_toStartOf="@+id/pass"
            app:layout_constraintTop_toBottomOf="@+id/pass"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintWidth_percent=".8"
            app:startIconDrawable="@drawable/lock"
            app:startIconTint="@color/blue_300">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/conf_pas"
                android:inputType="textPassword"
                android:maxLength="26"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/refferal"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/reffer"
            android:textColorHint="@color/blue_300"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="@color/blue_a200"
            app:boxStrokeErrorColor="@color/mtrl_error"
            app:boxStrokeWidth="2dp"
            app:endIconDrawable="@drawable/cross"
            app:endIconMode="clear_text"
            app:endIconTint="@color/blue_300"
            app:hintTextColor="@color/pink_A200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/confpass"
            app:layout_constraintStart_toStartOf="@+id/confpass"
            app:layout_constraintTop_toBottomOf="@+id/confpass"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintWidth_percent=".8"
            app:startIconDrawable="@drawable/refer"
            app:startIconTint="@color/blue_300">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/reffer"
                android:inputType="text"
                android:maxLength="10"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/poppins"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/refferal"
            app:layout_constraintStart_toStartOf="@+id/refferal"
            app:layout_constraintTop_toBottomOf="@+id/refferal"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintWidth_percent=".6" />

        <TextView
            android:id="@+id/termconditions"
            android:layout_width="279dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:text="@string/terms_and_conditions"
            android:textColor="@color/pink_A200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/signup"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintStart_toStartOf="@+id/signup"
            app:layout_constraintTop_toBottomOf="@+id/signup"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
