<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink500"
    android:focusableInTouchMode="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity"
        tools:ignore="ScrollViewSize">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poiret_one"
            android:text="Already \nHave an \nAccount?"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/sign_up"
            android:src="@drawable/login_illustration"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.06" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:layout_marginTop="250dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="40dp"
            android:elevation="2dp"
            android:clickable="true"
            android:focusable="true"
            android:checkable="true"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mobile"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/mobile_num"
                    android:textColorHint="@color/bluea900"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:boxStrokeColor="@color/blue_a200"
                    app:boxStrokeErrorColor="@color/mtrl_error"
                    app:boxStrokeWidth="2dp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/bluea900"
                    app:hintTextColor="@color/pink_A200"
                    android:layout_marginTop="30dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias=".5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0"
                    app:layout_constraintWidth_percent=".8"
                    app:prefixText="@string/country_code"
                    app:prefixTextColor="@color/bluea900"
                    app:startIconDrawable="@drawable/phone"
                    app:startIconTint="@color/bluea900"
                    tools:ignore="RtlSymmetry">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:paddingStart="20dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="20dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/bluea900"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pass"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:hint="@string/pass"
                    android:textColorHint="@color/bluea900"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:boxStrokeColor="@color/blue_a200"
                    app:boxStrokeErrorColor="@color/mtrl_error"
                    app:boxStrokeWidth="2dp"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/bluea900"
                    app:hintTextColor="@color/pink_A200"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/mobile"
                    app:layout_constraintStart_toStartOf="@+id/mobile"
                    app:layout_constraintTop_toBottomOf="@+id/mobile"
                    app:layout_constraintVertical_bias="0"
                    app:layout_constraintWidth_percent=".8"
                    app:startIconDrawable="@drawable/lock"
                    app:startIconTint="@color/bluea900">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/pass"
                        android:inputType="textPassword"
                        android:maxLength="26"
                        android:maxLines="1"
                        android:paddingStart="20dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="20dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/bluea900" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:background="@drawable/button_bg"
                    android:fontFamily="@font/poppins"
                    android:paddingStart="50dp"
                    android:paddingEnd="50dp"
                    android:text="@string/log_in"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:cornerRadius="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/pass"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/pass"
                    app:layout_constraintTop_toBottomOf="@+id/pass"
                    app:layout_constraintVertical_bias="0"
                    app:layout_constraintWidth_percent=".5" />

                <TextView
                    android:id="@+id/forgetpass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_pass"
                    android:textColor="@color/pink500"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/pass"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/login"
                    app:layout_constraintTop_toBottomOf="@+id/pass"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="215dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:onClick="newUserRegisterNow"
                    android:text="New user? Register Now"
                    android:textColor="@color/pink500"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/login"
                    app:layout_constraintHorizontal_bias=".5"
                    app:layout_constraintStart_toStartOf="@+id/login"
                    app:layout_constraintTop_toBottomOf="@+id/login"
                    app:layout_constraintVertical_bias="0"
                    tools:ignore="HardcodedText" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>